# Helm-AI

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: auth.py  costs.py  evaluations.py  guardrails.py  ingest.py  patterns.py  runs.py
backend/app/models/: __init__.py  cost.py  evaluation.py  guardrail.py  org.py  run.py  span.py
backend/app/schemas/: cost.py  evaluation.py  trace.py
backend/app/services/: __init__.py  alert_service.py  cost_service.py  eval_service.py  guardrail_service.py  pattern_service.py  trace_service.py
backend/app/workers/: alert_worker.py  eval_worker.py  trace_worker.py
backend/tests/: test_api.py
demo/: demo_agent.py  seed_data.py
docs/: getting-started.md
frontend/: next.config.js  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/costs/: page.tsx
frontend/src/app/evaluations/: page.tsx
frontend/src/app/guardrails/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/components/: index.tsx
frontend/src/lib/: api.ts
sdk/: pyproject.toml
sdk/src/agentcontrolroom/: __init__.py  client.py  cost.py  guardrails.py  spans.py  tracer.py
sdk/src/agentcontrolroom/instruments/: __init__.py  crewai.py  langchain.py  llamaindex.py
sdk/tests/: test_cost.py  test_spans.py  test_tracer.py
